Implementando Kafka e controller

--- a/car/src/main/resources/application.properties
+++ b/car/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # database configs
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/car_post_storage
+spring.datasource.url= jdbc:postgresql://localhost:5432/car_posts_storage
 spring.datasource.username= postgres
 spring.datasource.password= 1234567
 
