--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port= 8086
 
 # database configs
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/car_post_analytics
+spring.datasource.url= jdbc:postgresql://localhost:5432/car_posts_analytics
 spring.datasource.username= postgres
 spring.datasource.password= 1234567
 
